--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Biblioteca Virtual</title>
+		<link rel="alternate" type="application/rss+xml" title="RSS Feed" href="https://arturolg20.github.io/bibliotecaarlego/rss.xml" />
 		<link rel="stylesheet" href="estilos.css">
 		<style>
 			header a {
